# python-mastery-roadmap

./: .gitignore  README.md  dic.txt  pyproject.toml  requirements.txt  test.py
phase_01_foundations/: README.md
phase_01_foundations/01_syntax_and_types/exercises/: exercise_01.py
phase_01_foundations/01_syntax_and_types/notes/: README.md
phase_01_foundations/01_syntax_and_types/solutions/: solution_01.py
phase_01_foundations/02_control_flow_functions/exercises/: exercise_01.py
phase_01_foundations/02_control_flow_functions/notes/: README.md
phase_01_foundations/02_control_flow_functions/solutions/: solution_01.py
phase_01_foundations/03_oop_data_models/notes/: README.md
phase_02_intermediate/: README.md
phase_03_advanced/: README.md
phase_06_expert_habits/code_review_templates/: review_checklist.md
phase_06_expert_habits/reading_source_code/: README.md
projects/p1_polars_benchmark/: README.md
projects/p2_ml_registry/: README.md
projects/p3_rag_portfolio/: README.md
projects/p4_lakehouse/: README.md
projects/p5_async_scraper/: README.md
projects/p6_nl_to_sql/: README.md
projects/p7_forecasting_platform/: README.md
projects/p8_multi_agent/: README.md
projects/p9_profiler_cli/: README.md
tracks/advanced_python/: README.md  requirements.txt
tracks/ai_llms/: README.md  requirements.txt
tracks/data_engineering/: README.md  requirements.txt
tracks/data_science/: README.md  requirements.txt
tracks/data_science/data/: sales.csv
tracks/machine_learning/: README.md  requirements.txt
tracks/web_apis/: README.md  requirements.txt
(+28 files in other folders)
